--- a/content/exp.tex
+++ b/content/exp.tex
@@ -429,7 +429,7 @@ CUBA LIF DBN     	& 0.93 & 30.6 s                 \\\hline
 %  		\caption{CUBA LIF DBN.}
 %  		\label{fig:sub2}
 %	\end{subfigure}	
-%	\caption{Activations in the features maps in a artificial convolutional DBN and the converted spiking network architectures. }
+%	\caption{Activations in the features maps in an artificial convolutional DBN and the converted spiking network architectures. }
 %	\label{fig:convacts}
 %\end{figure}
 
@@ -437,7 +437,7 @@ CUBA LIF DBN     	& 0.93 & 30.6 s                 \\\hline
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=\textwidth]{imgs/convert/compl4.png}
-	\caption{Activations in the features maps in a artificial convolutional DBN and the converted spiking network architectures. }
+	\caption{Activations in the features maps in an artificial convolutional DBN and the converted spiking network architectures. }
 	\label{fig:convacts}
 \end{figure}
 
@@ -575,7 +575,7 @@ CUBA LIF DBN     	& 0.93 & 30.6 s                 \\\hline
 %  		\caption{Activations in the features maps of the fourth/label layer.}
 %  		\label{fig:sub2}
 %	\end{subfigure}
-%	\caption{Activations in the features maps in a as DBN converted RBM with conductance based LIF neurons. }
+%	\caption{Activations in the features maps in an as DBN converted RBM with conductance based LIF neurons. }
 %	\label{fig:stripes}
 %\end{figure}
 %
@@ -611,7 +611,7 @@ CUBA LIF DBN     	& 0.93 & 30.6 s                 \\\hline
 %  		\caption{Activations in the features maps of the fourth/label layer.}
 %  		\label{fig:sub2}
 %	\end{subfigure}
-%	\caption{Activations in the features maps in a as DBN converted RBM with current based LIF neurons. }
+%	\caption{Activations in the features maps in an as DBN converted RBM with current based LIF neurons. }
 %	\label{fig:stripes}
 %\end{figure}
 
